--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -16,9 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".CategoryView">
+        <activity android:name=".CategoryViewActivity">
         </activity>
-        <activity android:name=".AddNewBeverage">
+        <activity android:name=".AddDrinkActivity">
+        </activity>
+        <activity android:name=".DrinkViewActivity">
         </activity>
     </application>
 
